--- a/index.html
+++ b/index.html
@@ -5,7 +5,42 @@
         <title>Run Buddy First Website</title>
     </head>
     <body>
-        <h3>RUN BUDDY🏃</h3>
-        What We Do What You Do Your Trainers Reach Out
+     <!-- navigation -->
+    <header>
+        <h1>RUN BUDDY</h1>
+    </header>
+
+    <!-- hero/jumbotron -->
+    <section>
+
+    </section>
+
+    <!-- "What we do" section -->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <!-- "what we do" section -->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <!-- "what you do" section -->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <!-- "meet the trainers" section -->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+    
+    <!-- footer -->
+
     </body>
+    <footer>
+        <h2>❤️ Made with love by Run Buddy.</h2>
+    </footer>
 </html>
+
+<!--https://courses.bootcampspot.com/courses/306/pages/1-dot-1-7-revisit-our-git-workflow?module_item_id=96846 -->
