--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <body>
      <!-- navigation -->
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+          <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+        <!-- Unordered list element-->
+           <ul>
+        <!-- List item element -->
+              <li>
+                <!-- Anchor element -->
+                 <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                 <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                <a href="#your-trainers">Your Trainers</a>
+               </li>
+               <li>
+                <a href="#reach-out">Reach Out</a>
+               </li>
+             </ul>
+            </nav>
     </header>
 
     <!-- hero/jumbotron -->
@@ -43,4 +64,3 @@
     </footer>
 </html>
 
-<!-- https://courses.bootcampspot.com/courses/306/pages/1-dot-1-8-publish-with-github?module_item_id=96849-->
