--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+  <title>RUN BUDDY</title>
+        <meta charset="UTF-8" />
         <title>Run Buddy First Website</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
      <!-- navigation -->
