--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             allowfullscreen
             >
         </iframe>
-        <!--<div class="contact-form">
+        <div class="contact-form">
             <h3>
                 Contact Us
             </h3>
@@ -193,7 +193,7 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
-        </div>-->
+        </div>
         <div>
             <h3>Run Buddy</h3>
             <p>
